# ft_ls

./: CMakeLists.txt  Makefile  print_long.c
includes/: ft_ls.h
srcs/: ft_ls.c  read_dir.c  writeout.c
